tests/snapshots/test_runner__tests__compiler__typecheck__case_exhaustiveness_enum_3.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
enum Option<T> = Some(T) None

do
  let is_some_some =
    | Some(Some(_)) => true
  null

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/case_exhaustiveness_enum_3.kk:5:5
  │
5 │     | Some(Some(_)) => true
  │     ^^^^^^^^^^^^^^^^^^^^^^^ Non-exhaustive cases
  │
  = Missing case(s):

      | Some(None) => ...
      | None => ...
